--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,8 @@ inputs:
     required: true
 
 runs:
-  using: 'node16'
-  main: 'index.js'
+  using: 'node20'
+  main: 'dist/index.js'
 
 branding:
   icon: 'check-circle'
