--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "GitHub Action to update ClickUp tasks when PRs are reviewed",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ncc build index.js -o dist"
   },
   "keywords": [
     "github",
@@ -19,5 +20,8 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.3"
   }
-} 
+}
